# concurrency-runtime

./: .clang-format  .gitignore  README.md  conanfile.txt  meson.build  requirements.txt  run_perf.py
.github/workflows/: components.yaml  ex.yaml  meson.yaml  pool.yaml  scheduler.yaml  target_build_types.yaml  template.yaml
bench/: bench_async_mutex.cpp  bench_pool.cpp  main.cpp  meson.build  readme.md
config/: debug_profile  myprofile
doc/: perf.md
example/: main.cpp  meson.build
example/coro/: awaiter.cpp  awaiter.h  evt_awaiter_t.cpp  evt_awaiter_t.h  example_natural_nums.cpp  example_resumable.cpp  example_simple_func.cpp  example_stm.cpp  example_subscription.cpp  generator.h  meson.build
example/go/: example_go.cpp  meson.build
example/workload/: meson.build
example/workload/mutex/: main.cpp  meson.build
example/workload/pool/: main.cpp  meson.build
src/: meson.build
src/components/: meson.build
src/components/async_mutex/: async_mutex.cpp  async_mutex.h  async_mutex_coro_impl.cpp  async_mutex_coro_impl.h  config.h  event.cpp  event.h  mutex_awaiter.cpp  mutex_awaiter.h  resumable_no_own.cpp  resumable_no_own.h
src/components/function/: basic_function.h
src/components/intrusive/: list.h
src/components/lock_free/: classic_ms_queue.cpp  classic_ms_queue.h  queue.cpp  queue.h  simple_ms_queue.cpp  simple_ms_queue.h
src/components/lock_free/hazard/: fwd.h  hazard.cpp  hazard.h  hazard_manager.cpp  hazard_manager.h  manager.cpp  manager.h  mutator.cpp  mutator.h  retire.h  scan.cpp  scan.h  thread_state.cpp  thread_state.h
src/components/queue/: blocking_queue.h
src/components/sync/: queue_spinlock.h  spinlock.cpp
src/context/: README.md  context.cpp  context.h  meson.build  runner.h
src/context/buffer/: buffer.cpp  buffer.h  buffer_context.cpp  buffer_context.h  prepare_context.S  prepare_context.h  prepare_context.s  sys_context.h
src/context/engine/: engine_context.cpp  engine_context.h
src/context/internal/: README.md  internal_context.h
src/context/sanitizer/: sanitizer_context.h
src/context/sanitizer/address/: sanitizer_context.h
src/context/sanitizer/empty/: sanitizer_context.h
src/context/sanitizer/thread/: sanitizer_context.h
src/core/: meson.build
src/core/executor/: executor.cpp  executor.h
src/core/task/: task.h
src/coro/: coro.cpp  coro.h  fiber_coro.cpp  fiber_coro.h  meson.build  routine.h  stackfull_coro.cpp  stackfull_coro.h
src/executor/: executor.cpp  executor.h  meson.build  submit.cpp  submit.h
src/executor/manual/: intrusive_manual_executor.cpp  intrusive_manual_executor.h  manual_executor.cpp  manual_executor.h
src/executor/pool/: distributed_pool.cpp  distributed_pool.h  intrusive_pool.cpp  intrusive_pool.h  thread_pool.cpp  thread_pool.h
src/executor/pool/internal/: worker.cpp  worker.h
src/executor/strand/: intrusive_strand.cpp  intrusive_strand.h  strand.cpp  strand.h
src/executor/task/: fiber_task.h  task.cpp  task.h  task_base.h
src/executor/task/internal/: task_free_function.cpp  task_free_function.h
src/executor/thread_pool/: thread_pool.cpp  thread_pool.h
src/fiber/: awaiter.h  awaiter_fiber.cpp  awaiter_fiber.h  fiber.cpp  fiber.h  fiber_handle.cpp  meson.build  suspend.cpp  suspend.h
src/fiber/awaiter/: awaiter.h  event_awaiter.h  mutex_awaiter.h  suspend.cpp  suspend.h  wait_group_awaiter.h  yield_awaiter.h
src/fiber/handle/: fiber_handle.cpp  fiber_handle.h  stopped_fiber.cpp  stopped_fiber.h
src/fiber/intrusive/: list.cpp
src/fiber/sync/: async_mutex.cpp  async_mutex.h  event.cpp  event.h  spinLock.h  wait_group.cpp  wait_group.h
src/go/: go.cpp  go.h  meson.build
src/pool/: meson.build
src/pool/executor/: executor.cpp  executor.h
src/pool/task/: fiber_task.h
src/pool_queue/: meson.build
src/pool_queue/blocking_queue/: queue.h
src/sync/: meson.build  spinLock.h
test/: meson.build  test_simple.cpp
test/common/: clock.h
test/components/: meson.build  test_async_mutex.cpp  test_basic_function.cpp  test_intrusive_list.cpp  test_lk_queue.cpp  test_ms_queue.cpp  test_queue_spinlock.cpp  test_unbounded_blocking_queue.cpp
test/context/: meson.build  test_ctx.cpp
test/coro/: meson.build  test_coro.cpp  test_coro_threads.cpp
test/ctx/: main.cpp  meson.build  test_ctx.cpp
test/executor/: main.cpp  meson.build  test_distributed_pool.cpp  test_manual_executor.cpp  test_strand.cpp  test_thread_pool.cpp
test/fiber/: meson.build  test_event.cpp  test_fiber.cpp  test_list.cpp  test_mutex.cpp  test_wait_group.cpp
test/pool/: meson.build  test_distributed_pool.cpp  test_manual_executor.cpp  test_simple.cpp  test_strand.cpp  test_thread_pool.cpp
test/queue/: meson.build  test_unbounded_blocking_queue.cpp
tools/: configure.py  prepare.py
