example_resumable = executable('example_resumable',
                               'example_resumable.cpp',
)

example_natural_nums = executable('example_natural_nums',
                                  'example_natural_nums.cpp',
)

example_simple_func = executable('example_simple_func',
                                 'example_simple_func.cpp',
)