example_resumable = executable('example_resumable',
                               'example_resumable.cpp',
)

example_natural_nums = executable('example_natural_nums',
                                  'example_natural_nums.cpp',
)

example_simple_func = executable('example_simple_func',
                                 'example_simple_func.cpp',
)

example_subscription_sources = files(
    'example_subscription.cpp',
    'awaiter.cpp',
    'evt_awaiter_t.cpp',
)

example_subscription = executable('example_subscription',
                                  example_subscription_sources
)

example_mutex = executable('example_mutex',
                           'example_mutex.cpp'
)
